# copy_three_dirs

./: .gitignore  README.md  pyproject.toml
copy_three_dirs/: export_data.py  join_images.py  join_images_cv.py  join_images_pil.py  join_images_tasks.py  main.py  parse_args.py
script/: build-version.py  build.cmd
tests/: test_cp.py
